force-app/main/default/objects/cgcloud__BO_API_Step_Input_Structure__c/cgcloud__BO_API_Step_Input_Structure__c.object-meta.xml
<CustomObject>
    <description>This table holds the input structure configuration that business object API workflow steps expects.</description>
    <label>Business Object API Step Input Structure</label>
    <nameField>
        <displayFormat>SIS-{000}</displayFormat>
        <label>Business Object API Step Input Structure</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Business Obj. API Step Input Structures</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>