force-app/main/default/objects/cgcloud__BO_API_Step_Input_Structure__c/fields/cgcloud__BO_API_Workflow_Step__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__BO_API_Workflow_Step__c</fullName>
    <description>Reference to the business object API workflow step.</description>
    <label>Business Object API Workflow Step</label>
    <referenceTo>cgcloud__BO_API_Workflow_Step__c</referenceTo>
    <relationshipLabel>Step Input Structures</relationshipLabel>
    <relationshipName>BO_API_Step_Input_Structures</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>