force-app/main/default/objects/cgcloud__BO_API_Step_Input_Structure__c/fields/cgcloud__Maps_To__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Maps_To__c</fullName>
    <description>Used for the mapValues rule. Defines the field on the output where the value will be mapped. A list of fields can be specified separating them with commas. The token &quot;&lt;&lt;NS&gt;&gt;&quot; can be used to replace it with the required namespace.</description>
    <inlineHelpText>Defines the field on the output where the value will be mapped. A list of fields can be specified separating them with commas.</inlineHelpText>
    <label>Maps To</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>