force-app/main/default/objects/cgcloud__BO_API_Step_Input_Structure__c/fields/cgcloud__Maximum_Items__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Maximum_Items__c</fullName>
    <description>Defines the maximum number of items. Displayed for RecordType Array.</description>
    <inlineHelpText>Defines the maximum number of items.</inlineHelpText>
    <label>Maximum Items</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>