force-app/main/default/objects/cgcloud__BO_API_Step_Input_Structure__c/fields/cgcloud__Minimum__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Minimum__c</fullName>
    <description>Defines the minimum value for the Number. Displayed for RecordType Number.</description>
    <inlineHelpText>Defines the minimum value for the Number.</inlineHelpText>
    <label>Minimum</label>
    <precision>18</precision>
    <scale>5</scale>
    <type>Number</type>
</CustomField>