force-app/main/default/objects/cgcloud__BO_API_Step_Input_Structure__c/fields/cgcloud__Minimum_Length__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Minimum_Length__c</fullName>
    <description>Defines the minimum length for the String. Displayed for RecordType String.</description>
    <inlineHelpText>Defines the minimum length for the String.</inlineHelpText>
    <label>Minimum Length</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>