force-app/main/default/objects/cgcloud__BO_API_Step_Input_Structure__c/fields/cgcloud__Path__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Path__c</fullName>
    <description>Defines the path of the Input JSON where the attribute is found.</description>
    <inlineHelpText>Defines the path of the Input JSON where the attribute is found.</inlineHelpText>
    <label>Path</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>