force-app/main/default/objects/cgcloud__BO_API_Step_Input_Structure__c/fields/cgcloud__Pattern__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Pattern__c</fullName>
    <description>Defines the pattern the String must match. The input must compile to a APEX RegExp. APEX uses the Java RegExp engine. Displayed for RecordType String.</description>
    <inlineHelpText>Defines the pattern the String must match.</inlineHelpText>
    <label>Pattern</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>