force-app/main/default/objects/cgcloud__BO_API_Step_Input_Structure__c/fields/cgcloud__Required__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Required__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Determines if the property is required.</description>
    <label>Required</label>
    <type>Checkbox</type>
</CustomField>