force-app/main/default/objects/cgcloud__BO_API_Step_Input_Structure__c/recordTypes/cgcloud__Array.recordType-meta.xml
<RecordType>
    <fullName>cgcloud__Array</fullName>
    <active>true</active>
    <label>Array</label>
</RecordType>