force-app/main/default/objects/cgcloud__BO_API_Step_Input_Structure__c/recordTypes/cgcloud__Boolean.recordType-meta.xml
<RecordType>
    <fullName>cgcloud__Boolean</fullName>
    <active>true</active>
    <label>Boolean</label>
</RecordType>