force-app/main/default/objects/cgcloud__BO_API_Step_Input_Structure__c/recordTypes/cgcloud__Number.recordType-meta.xml
<RecordType>
    <fullName>cgcloud__Number</fullName>
    <active>true</active>
    <label>Number</label>
</RecordType>