force-app/main/default/objects/cgcloud__BO_API_Step_Input_Structure__c/recordTypes/cgcloud__Object.recordType-meta.xml
<RecordType>
    <fullName>cgcloud__Object</fullName>
    <active>true</active>
    <label>Object</label>
</RecordType>