force-app/main/default/objects/cgcloud__BO_API_Step_Input_Structure__c/recordTypes/cgcloud__String.recordType-meta.xml
<RecordType>
    <fullName>cgcloud__String</fullName>
    <active>true</active>
    <label>String</label>
</RecordType>