force-app/main/default/objects/cgcloud__BO_API_Step_Input_Structure__c/validationRules/cgcloud__Pattern_should_be_a_valid_Apex_RegExp.validationRule-meta.xml
<ValidationRule>
    <fullName>cgcloud__Pattern_should_be_a_valid_Apex_RegExp</fullName>
    <active>true</active>
    <description>Validation rule to verify regular expression compilation errors.</description>
    <errorConditionFormula>IF(REGEX(&quot;&quot;, cgcloud__Pattern__c), false, false)</errorConditionFormula>
    <errorDisplayField>cgcloud__Pattern__c</errorDisplayField>
    <errorMessage>Regular Expression compilation error</errorMessage>
</ValidationRule>